--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -18,189 +20,228 @@
 
 <body>
 
-    <!-- Header -->
-    <div class="jumbotron jumbotron-fluid">
-        <div class="title-container">
-            <h1 class="display-4">Breaking Bad Trivia</h1>
-            <p class="lead">A timed quiz for those who love Los Pollos Hermanos!</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Header -->
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="title-container">
+                        <h1 class="display-4"><strong>Breaking Bad Trivia</strong></h1>
+                        <p class="lead">A timed quiz for those who love Los Pollos Hermanos!</p>
+                    </div>
+                </div>
+
+                <!-- Start button/Timer/Beginning page -->
+                <div id="scoreboard">
+                    <div id="quiz">
+                        <button class="btn btn-outline-warning" id="start-button" type="botton">Let's Begin!</button>
+                        <h1 id="timeClock">Time Remaining:<span id="timer"></span></h1>
+                    </div>
+                </div><br>
+
+                <!-- Trivia questions -->
+                <div class="questions">
+                    <!-- First question -->
+                    <div class="question0">
+                        <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real
+                            chemistry lab?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Storage container
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> RV
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Barn
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Warehouse
+                                </label>
+                            </div>
+                        </form>
+                    </div><br>
+                    <!-- Second question -->
+                    <div class="question1">
+                        <h2 class="quiz-question">Walt's brother in law Hank was a/an ____ agent?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> ATF
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> FBI
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> CIA
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> DEA
+                                </label>
+                            </div>
+                        </form>
+                    </div><br>
+                    <!-- Third question -->
+                    <div class="question2">
+                        <h2 class="quiz-question">What was Walt's street name?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Tuco
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Roosevelt
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> Heisenburg
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Hector
+                                </label>
+                            </div>
+                        </form>
+                    </div><br>
+                    <!-- Fourth question -->
+                    <div class="question3">
+                        <h2 class="quiz-question">What color was the crystal meth that Walt cooked?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> Blue
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Green
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Purple
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> No color
+                                </label>
+                            </div>
+                        </form>
+                    </div><br>
+                    <!-- Fifth question -->
+                    <div class="question4">
+                        <h2 class="quiz-question">How did Walt and Jesse pinkman meet each other?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Jesse was a clerk at a gas
+                                    station near
+                                    Walt's house
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Walter Jr. and Jesse were
+                                    best friends
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Jesse was a waiter at Walt's
+                                    favorite
+                                    diner
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> Walt was Jesse's high
+                                    school teacher
+                                </label>
+                            </div>
+                        </form>
+                    </div><br>
+                    <!-- Sixth question -->
+                    <div class="question5">
+                        <h2 class="quiz-question">Whwere was Gus Fring's meth lab located under?
+                        </h2>
+                        <form class="answerChoices">
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Los Pollos Hermanos
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="correct"> Laundry facility
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Car wash
+                                </label>
+                            </div>
+                            <div>
+                                <label class="form-check-label">
+                                    <input type="radio" class="radioButton" value="wrong"> Parking garage
+                                </label>
+                            </div>
+                        </form>
+                    </div><br><br>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Start button/Timer/Beginning page -->
-    <div id="scoreboard">
-        <div id="quiz">
-            <button class="btn btn-outline-warning" id="start-button" type="botton">Let's Begin!</button>
-            <h1 id="timeClock">Time Remaining:<span id="timer"></span></h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Submission button -->
+                <div>
+                    <button type="button" id="done-button" class="btn btn-outline-warning">I'm done!</button>
+                </div>
+            </div>
+        </div>
+    </div><br><br>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <!-- Score at the end of quiz-->
+                <div class="scoreboard">
+                    <h1 id="overview">Let's See How You Did!</h1><br>
+                    <h2 id="answersRight">Correct Answers!</h2>
+                    <h2 id="answersWrong">Incorrect Answers:</h2>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Trivia questions -->
-    <div class="questions">
-        <!-- First question -->
-        <div class="question0">
-            <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real chemistry lab?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Storage container
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> RV
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Barn
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Warehouse
-                    </label>
-                </div>
-            </form>
-        </div>
-        <!-- Second question -->
-        <div class="question1">
-            <h2 class="quiz-question">Walt's brother in law, Hank, was a/an ____ agent?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> ATF
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> FBI
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> CIA
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> DEA
-                    </label>
-                </div>
-            </form>
-        </div>
-        <!-- Third question -->
-        <div class="question2">
-            <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real chemistry lab?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Storage container
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> RV
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Barn
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Warehouse
-                    </label>
-                </div>
-            </form>
-        </div>
-        <!-- Fourth question -->
-        <div class="question3">
-            <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real chemistry lab?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Storage container
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> RV
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Barn
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Warehouse
-                    </label>
-                </div>
-            </form>
-        </div>
-        <!-- Fifth question -->
-        <div class="question4">
-            <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real chemistry lab?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Storage container
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> RV
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Barn
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Warehouse
-                    </label>
-                </div>
-            </form>
-        </div>
-        <!-- Sixth question -->
-        <div class="question5">
-            <h2 class="quiz-question">Where did Walter and Jesse cook meth before they worked in a real chemistry lab?
-            </h2>
-            <form class="answerChoices">
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Storage container
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="correct"> RV
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Barn
-                    </label>
-                </div>
-                <div>
-                    <label class="form-check-label">
-                        <input type="radio" class="radioButton" value="wrong"> Warehouse
-                    </label>
-                </div>
-            </form>
-        </div>
-
-    </div>
-
+    <!-- JS link -->
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 
